# BAMB2023

./: README.md  log_beliefs.csv
1-modeling_101/: tutorial_1A.ipynb  tutorial_1A_solution.ipynb  tutorial_1B.ipynb  tutorial_1C.ipynb  tutorial_1C_solution.ipynb
1-modeling_101/.ipynb_checkpoints/: tutorial_1A_solution-checkpoint.ipynb  tutorial_1B-checkpoint.ipynb  tutorial_1C-checkpoint.ipynb  tutorial_1C_solution-checkpoint.ipynb
2-drift_diffusion_models/: BAMB_ddm_tutorial.pptx  bamb_tutorial2_ddm.ipynb  bamb_tutorial2_ddm_solutions.ipynb  bamb_tutorial3_ddm.ipynb
3-reinforcement_learning/: BAMB_tutorial3A_RL.pptx  tutorial_3B_RL-instructions.ipynb  tutorial_3B_RL-solutions.ipynb  tutorial_3B_RL-solutions_old.ipynb
3-reinforcement_learning/3A-reinforcement_learning/: README.md  (+2 more)
4-recurrent_neural_networks/: PerceptualDecisionMaking_v0.ipynb  README.md  data.py  ops.py  pyproject.toml  tutorial_4_RNNs-instructions.ipynb  tutorial_4_RNNs-solutions.ipynb  tutorial_4_RNNs-solutions_reviewed_Heike.ipynb  tutorial_4_RNNs_bis-solutions.ipynb  tutorial_4_models-solutions.ipynb
5-bayesian_models/: README.md  SUB001_stopExp_evidence.csv  SUB001_stopExp_replay.csv  Tutorial5_BayesianModels_Instructions.ipynb  Tutorial5_BayesianModels_Solutions.ipynb
6-latent_variable_models/: Hidden Markov Models.ipynb  Mixture Models and Expectation Maximization.ipynb  README.md
slides_lectures/: BAMB! 2023 Project work kick-off.pptx  BAMB2023_1A_Hyafil_General_introduction.pptx  BAMB2023_1C_Rouault_Model_comparison.ppt  BAMB_RL_tutorial.pptx  slides tutorial RNNs.pptx
(+8 files in other folders)
